--- a/public/css/core-style.css
+++ b/public/css/core-style.css
@@ -939,70 +939,58 @@ img {
 .search-wrapper-on .main-content-wrapper {
   margin-top: 260px; }
 
-.single-products-catagory {
-  position: relative;
-  z-index: 1;
-  width: 33.33333%;
-  top: 0; }
+  .single-products-catagory {
+    position: relative;
+    z-index: 1;
+    width: 33.33333%;
+    height: 300px; /* Ensure a fixed height for the square container */
+    overflow: hidden; /* Prevent content from spilling out */
+    display: flex;
+    justify-content: center;
+    align-items: center; /* Center the image within the container */
+  }
+  
   @media only screen and (min-width: 992px) and (max-width: 1199px) {
     .single-products-catagory {
-      width: 50%; } }
+      width: 50%;
+      height: 300px; /* Keep it square */
+    }
+  }
+  
   @media only screen and (min-width: 768px) and (max-width: 991px) {
     .single-products-catagory {
-      width: 100%; } }
+      width: 100%;
+      height: 300px; /* Keep it square */
+    }
+  }
+  
   @media only screen and (max-width: 767px) {
     .single-products-catagory {
-      width: 100%; } }
+      width: 100%;
+      height: 300px; /* Keep it square */
+    }
+  }
+  
   @media only screen and (min-width: 576px) and (max-width: 767px) {
     .single-products-catagory {
-      width: 50%; } }
+      width: 50%;
+      height: 300px; /* Keep it square */
+    }
+  }
+  
   .single-products-catagory a {
     display: block;
     width: 100%;
     height: 100%;
     position: relative;
-    z-index: 10; }
-    .single-products-catagory a::after {
-      -webkit-transition-duration: 250ms;
-      transition-duration: 250ms;
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      content: '';
-      background-color: rgba(60, 60, 60, 0.7);
-      z-index: 1;
-      opacity: 0;
-      visibility: visible; }
-    .single-products-catagory a img {
-      width: 100%; }
-  .single-products-catagory .hover-content {
-    position: absolute;
-    top: 40px;
-    left: 40px;
-    z-index: 10; }
-    @media only screen and (max-width: 767px) {
-      .single-products-catagory .hover-content {
-        top: 30px;
-        left: 30px; } }
-    .single-products-catagory .hover-content .line {
-      width: 80px;
-      height: 3px;
-      background-color: #fbb710;
-      display: block;
-      margin-bottom: 15px; }
-    .single-products-catagory .hover-content p {
-      font-size: 16px;
-      color: #6d6d6d;
-      line-height: 1;
-      margin-bottom: 5px;
-      -webkit-transition-duration: 250ms;
-      transition-duration: 250ms; }
-    .single-products-catagory .hover-content h4 {
-      margin-bottom: 0;
-      -webkit-transition-duration: 250ms;
-      transition-duration: 250ms; }
+    z-index: 10;
+  }
+  
+  .single-products-catagory a img {
+    width: 100%; /* Match the container width */
+    height: 
+  }
+  
   .single-products-catagory:hover a::after, .single-products-catagory:focus a::after {
     opacity: 1;
     visibility: visible; }
