--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -47,7 +47,7 @@
                 <div class="section-menu-left">
                     <div class="box-logo">
                         <a href="/admin/dashboard" id="site-logo-inner">
-                            <img class="" id="logo_header" alt="" src="images/logo/logo.png" data-light="images/logo/logo.png" data-dark="images/logo/logo-dark.png" >
+                            <img class="" id="logo_header" alt="" src="/images/logo/logo.png" data-light="/images/logo/logo.png" data-dark="/images/logo/logo-dark.png" >
                         </a>
                         <div class="button-show-hide">
                             <i class="icon-menu-left"></i>
@@ -100,31 +100,22 @@
                                     </a>
                                     <ul class="sub-menu">
                                         <li class="sub-menu-item">
-                                            <a href="/admin/category-list" class="">
-                                                <div class="text">Category list</div>
+                                            <a href="/admin/fragrance-list" class="">
+                                                <div class="text">Fragrance List</div>
                                             </a>
                                         </li>
                                         <li class="sub-menu-item">
-                                            <a href="new-category.html" class="">
-                                                <div class="text">New category</div>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item has-children">
-                                    <a href="javascript:void(0);" class="menu-item-button">
-                                        <div class="icon"><i class="icon-box"></i></div>
-                                        <div class="text">Attributes</div>
-                                    </a>
-                                    <ul class="sub-menu">
-                                        <li class="sub-menu-item">
-                                            <a href="attributes.html" class="">
-                                                <div class="text">Attributes</div>
+                                            <a href="/admin/add-fragrance" class="">
+                                                <div class="text">Add Fragrance Type</div>
                                             </a>
                                         </li>
                                         <li class="sub-menu-item">
-                                            <a href="add-attributes.html" class="">
-                                                <div class="text">Add attributes</div>
+                                            <a href="/admin/occasion-list" class="">
+                                                <div class="text">Occasion List</div>
+                                            </a>
+                                        </li><li class="sub-menu-item">
+                                            <a href="/admin/add-occasion" class="">
+                                                <div class="text">Add Occasions</div>
                                             </a>
                                         </li>
                                     </ul>
@@ -159,57 +150,11 @@
                                     </a>
                                     <ul class="sub-menu">
                                         <li class="sub-menu-item">
-                                            <a href="all-user.html" class="">
+                                            <a href="/admin/all-user" class="">
                                                 <div class="text">All user</div>
                                             </a>
                                         </li>
-                                        <li class="sub-menu-item">
-                                            <a href="add-new-user.html" class="">
-                                                <div class="text">Add new user</div>
-                                            </a>
-                                        </li>
-                                        <li class="sub-menu-item">
-                                            <a href="login.html" class="">
-                                                <div class="text">Login</div>
-                                            </a>
-                                        </li>
-                                        <li class="sub-menu-item">
-                                            <a href="sign-up.html" class="">
-                                                <div class="text">Sign up</div>
-                                            </a>
-                                        </li>
                                     </ul>
-                                </li>
-                                <li class="menu-item has-children">
-                                    <a href="javascript:void(0);" class="menu-item-button">
-                                        <div class="icon"><i class="icon-user-plus"></i></div>
-                                        <div class="text">Roles</div>
-                                    </a>
-                                    <ul class="sub-menu">
-                                        <li class="sub-menu-item">
-                                            <a href="all-roles.html" class="">
-                                                <div class="text">All roles</div>
-                                            </a>
-                                        </li>
-                                        <li class="sub-menu-item">
-                                            <a href="create-role.html" class="">
-                                                <div class="text">Create role</div>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item">
-                                    <a href="gallery.html" class="">
-                                        <div class="icon"><i class="icon-image"></i></div>
-                                        <div class="text">Gallery</div>
-                                    </a>
-                                </li>
-                                <li class="menu-item">
-                                    <a href="report.html" class="">
-                                        <div class="icon"><i class="icon-pie-chart"></i></div>
-                                        <div class="text">Report</div>
-                                    </a>
-                                </li>
                             </ul>
                         </div>
                         <div class="center-item">
@@ -339,18 +284,6 @@
                                     <a href="#"><i class="icon-instagram"></i></a>
                                 </li>
                             </ul>
-                        </div>
-                    </div>
-                    <div class="bot text-center">
-                        <div class="wrap">
-                            <div class="mb-20">
-                                <img src="images/menu-left/img-bot.png" alt="">
-                            </div>
-                            <div class="mb-20">
-                                <h6>Hi, how can we help?</h6>
-                                <div class="text">Contact us if you have any assistance, we will contact you as soon as possible</div>
-                            </div>
-                            <a href="#" class="tf-button w-full">Contact</a>
                         </div>
                     </div>
                 </div>
