--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -25,13 +25,13 @@
 
 
     <!-- Font -->
-    <link rel="stylesheet" href="font/fonts.css">
+    <link rel="stylesheet" href="/font/fonts.css">
 
     <!-- Icon -->
-    <link rel="stylesheet" href="icon/style.css">
+    <link rel="stylesheet" href="/icon/style.css">
 
     <!-- Favicon and Touch Icons  -->
-    <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="shortcut icon" href="/images/favicon.png">
     <link rel="apple-touch-icon-precomposed" href="images/favicon.png">
 
 </head>
@@ -65,45 +65,15 @@
                         <div class="center-item">
                             <div class="center-heading">Main Home</div>
                             <ul class="menu-list">
-                                <li class="menu-item has-children">
+                                <li class="menu-item has-children active">
                                     <a href="javascript:void(0);" class="menu-item-button">
                                         <div class="icon"><i class="icon-grid"></i></div>
                                         <div class="text">Dashboard</div>
                                     </a>
-                                    <ul class="sub-menu">
+                                    <ul class="sub-menu" style="display: block;">
                                         <li class="sub-menu-item">
-                                            <a href="index.html" class="">
+                                            <a href="/admin/dashboard" class="active">
                                                 <div class="text">Home 01</div>
-                                            </a>
-                                        </li>
-                                        <li class="sub-menu-item">
-                                            <a href="home-2.html" class="">
-                                                <div class="text">Home 02</div>
-                                            </a>
-                                        </li>
-                                        <li class="sub-menu-item">
-                                            <a href="home-3.html" class="">
-                                                <div class="text">Home 03</div>
-                                            </a>
-                                        </li>
-                                        <li class="sub-menu-item">
-                                            <a href="home-4.html" class="">
-                                                <div class="text">Home 04</div>
-                                            </a>
-                                        </li>
-                                        <li class="sub-menu-item">
-                                            <a href="home-boxed.html" class="">
-                                                <div class="text">Home Boxed</div>
-                                            </a>
-                                        </li>
-                                        <li class="sub-menu-item">
-                                            <a href="home-menu-icon-hover.html" class="">
-                                                <div class="text">Home Menu Icon Hover</div>
-                                            </a>
-                                        </li>
-                                        <li class="sub-menu-item">
-                                            <a href="home-menu-icon-default.html" class="">
-                                                <div class="text">Home Menu Icon Default</div>
                                             </a>
                                         </li>
                                     </ul>
@@ -113,19 +83,19 @@
                         <div class="center-item">
                             <div class="center-heading">All page</div>
                             <ul class="menu-list">
-                                <li class="menu-item has-children active">
+                                <li class="menu-item has-children">
                                     <a href="javascript:void(0);" class="menu-item-button">
                                         <div class="icon"><i class="icon-shopping-cart"></i></div>
                                         <div class="text">Ecommerce</div>
                                     </a>
-                                    <ul class="sub-menu" style="display: block;">
+                                    <ul class="sub-menu">
                                         <li class="sub-menu-item">
-                                            <a href="add-product.html" class="active">
+                                            <a href="/admin/add-product" class="">
                                                 <div class="text">Add Product</div>
                                             </a>
                                         </li>
                                         <li class="sub-menu-item">
-                                            <a href="product-list.html" class="">
+                                            <a href="/admin/product-list" class="">
                                                 <div class="text">Product List</div>
                                             </a>
                                         </li>
@@ -138,31 +108,22 @@
                                     </a>
                                     <ul class="sub-menu">
                                         <li class="sub-menu-item">
-                                            <a href="category-list.html" class="">
-                                                <div class="text">Category list</div>
+                                            <a href="/admin/fragrance-list" class="">
+                                                <div class="text">Fragrance List</div>
                                             </a>
                                         </li>
                                         <li class="sub-menu-item">
-                                            <a href="new-category.html" class="">
-                                                <div class="text">New category</div>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item has-children">
-                                    <a href="javascript:void(0);" class="menu-item-button">
-                                        <div class="icon"><i class="icon-box"></i></div>
-                                        <div class="text">Attributes</div>
-                                    </a>
-                                    <ul class="sub-menu">
-                                        <li class="sub-menu-item">
-                                            <a href="attributes.html" class="">
-                                                <div class="text">Attributes</div>
+                                            <a href="/admin/add-fragrance" class="">
+                                                <div class="text">Add Fragrance Type</div>
                                             </a>
                                         </li>
                                         <li class="sub-menu-item">
-                                            <a href="add-attributes.html" class="">
-                                                <div class="text">Add attributes</div>
+                                            <a href="/admin/occasion-list" class="">
+                                                <div class="text">Occasion List</div>
+                                            </a>
+                                        </li><li class="sub-menu-item">
+                                            <a href="/admin/add-occasion" class="">
+                                                <div class="text">Add Occasions</div>
                                             </a>
                                         </li>
                                     </ul>
@@ -197,57 +158,11 @@
                                     </a>
                                     <ul class="sub-menu">
                                         <li class="sub-menu-item">
-                                            <a href="all-user.html" class="">
+                                            <a href="/admin/all-user" class="">
                                                 <div class="text">All user</div>
                                             </a>
                                         </li>
-                                        <li class="sub-menu-item">
-                                            <a href="add-new-user.html" class="">
-                                                <div class="text">Add new user</div>
-                                            </a>
-                                        </li>
-                                        <li class="sub-menu-item">
-                                            <a href="login.html" class="">
-                                                <div class="text">Login</div>
-                                            </a>
-                                        </li>
-                                        <li class="sub-menu-item">
-                                            <a href="sign-up.html" class="">
-                                                <div class="text">Sign up</div>
-                                            </a>
-                                        </li>
                                     </ul>
-                                </li>
-                                <li class="menu-item has-children">
-                                    <a href="javascript:void(0);" class="menu-item-button">
-                                        <div class="icon"><i class="icon-user-plus"></i></div>
-                                        <div class="text">Roles</div>
-                                    </a>
-                                    <ul class="sub-menu">
-                                        <li class="sub-menu-item">
-                                            <a href="all-roles.html" class="">
-                                                <div class="text">All roles</div>
-                                            </a>
-                                        </li>
-                                        <li class="sub-menu-item">
-                                            <a href="create-role.html" class="">
-                                                <div class="text">Create role</div>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item">
-                                    <a href="gallery.html" class="">
-                                        <div class="icon"><i class="icon-image"></i></div>
-                                        <div class="text">Gallery</div>
-                                    </a>
-                                </li>
-                                <li class="menu-item">
-                                    <a href="report.html" class="">
-                                        <div class="icon"><i class="icon-pie-chart"></i></div>
-                                        <div class="text">Report</div>
-                                    </a>
-                                </li>
                             </ul>
                         </div>
                         <div class="center-item">
@@ -326,8 +241,10 @@
                                         <div class="icon"><i class="icon-help-circle"></i></div>
                                         <div class="text">Help center</div>
                                     </a>
+
                                 </li>
-                                <li class="menu-item">
+                              
+                               <li class="menu-item">
                                     <a href="#" class="">
                                         <div class="icon">
                                             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -375,18 +292,6 @@
                                     <a href="#"><i class="icon-instagram"></i></a>
                                 </li>
                             </ul>
-                        </div>
-                    </div>
-                    <div class="bot text-center">
-                        <div class="wrap">
-                            <div class="mb-20">
-                                <img src="images/menu-left/img-bot.png" alt="">
-                            </div>
-                            <div class="mb-20">
-                                <h6>Hi, how can we help?</h6>
-                                <div class="text">Contact us if you have any assistance, we will contact you as soon as possible</div>
-                            </div>
-                            <a href="#" class="tf-button w-full">Contact</a>
                         </div>
                     </div>
                 </div>
@@ -984,13 +889,13 @@
     <!-- /#wrapper -->
 
     <!-- Javascript -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/bootstrap-select.min.js"></script>
-    <script src="js/zoom.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap-select.min.js"></script>
+    <script src="/js/zoom.js"></script>
     <!-- <script src="js/switcher.js"></script> -->
-    <script src="js/theme-settings.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/theme-settings.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 
