--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -9,14 +9,14 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>labelle - perfume Ecommerce website | Home</title>
+    <title>Amado - Furniture Ecommerce Template | Home</title>
 
     <!-- Favicon  -->
-    <link rel="icon" href="/img/core-img/favicon.png">
+    <link rel="icon" href="img/core-img/favicon.ico">
 
     <!-- Core Style CSS -->
-    <!-- <link rel="stylesheet" href="/css/core-style.css"> -->
- <link rel="stylesheet" href="/css/core-style.css">
+    <link rel="stylesheet" href="css/core-style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -32,7 +32,7 @@
                     <div class="search-content">
                         <form action="#" method="get">
                             <input type="search" name="search" id="search" placeholder="Type your keyword...">
-                            <button type="submit"><img src="/img/core-img/search.png" alt=""></button>
+                            <button type="submit"><img src="img/core-img/search.png" alt=""></button>
                         </form>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
         <div class="mobile-nav">
             <!-- Navbar Brand -->
             <div class="amado-navbar-brand">
-                <a href="/"><img src="/img/core-img/logo.png" alt=""></a>
+                <a href="/user/home"><img src="img/core-img/logo.png" alt=""></a>
             </div>
             <!-- Navbar Toggler -->
             <div class="amado-navbar-toggler">
@@ -64,29 +64,38 @@
             </div>
             <!-- Logo -->
             <div class="logo">
-                <a href="/home"><img src="/img/core-img/logo.png" alt=""></a>
+                <a href="/"><img src="img/core-img/logo.png" alt=""></a>
             </div>
             <!-- Amado Nav -->
             <nav class="amado-nav">
                 <ul>
                     <li class="active"><a href="/">Home</a></li>
                     <li><a href="/shop">Shop</a></li>
-                    <li><a href="/productDetails">Product</a></li>
+                   
                     <li><a href="/cart">Cart</a></li>
-                    <li><a href="/checkout">Checkout</a></li>
+                  
                 </ul>
             </nav>
             <!-- Button Group -->
             <div class="amado-btn-group mt-30 mb-100">
-                <a href="/login" class="btn amado-btn mb-15">Login</a>
+
+                <% if (user) { %>
+                    <!-- Show the logout button if the user is logged in -->
+                    <button  class="btn amado-btn mb-15" onclick="window.location.href='/logout'">Logout</button>
+                  <% } else { %>
+                    <!-- Show the login button if the user is not logged in -->
+                    <button  class="btn amado-btn mb-15" onclick="window.location.href='/login'">Login</button>
+                  <% } %>
+                
+
+                <!-- <a href="/login">Login</a> -->
                 <a href="#" class="btn amado-btn active">New this week</a>
             </div>
-            
             <!-- Cart Menu -->
             <div class="cart-fav-search mb-100">
-                <a href="/cart" class="cart-nav"><img src="/img/core-img/cart.png" alt=""> Cart <span>(0)</span></a>
-                <a href="#" class="fav-nav"><img src="/img/core-img/favorites.png" alt=""> Favourite</a>
-                <a href="#" class="search-nav"><img src="/img/core-img/search.png" alt=""> Search</a>
+                <a href="/cart" class="cart-nav"><img src="img/core-img/cart.png" alt=""> Cart <span>(0)</span></a>
+                <a href="#" class="fav-nav"><img src="img/core-img/favorites.png" alt=""> Favourite</a>
+                <a href="#" class="search-nav"><img src="img/core-img/search.png" alt=""> Search</a>
             </div>
             <!-- Social Button -->
             <div class="social-info d-flex justify-content-between">
@@ -102,129 +111,24 @@
         <div class="products-catagories-area clearfix">
             <div class="amado-pro-catagory clearfix">
 
-                <!-- Single Catagory -->
-                <div class="single-products-catagory clearfix">
-                    <a href="/shop">
-                        <img src="/img/bg-img/1.jpg" alt="">
-                        <!-- Hover Content -->
-                        <div class="hover-content">
-                            <div class="line"></div>
-                            <p>From $100</p>
-                            <h4>Timber Soul</h4>
-                        </div>
-                    </a>
-                </div>
-
-                <!-- Single Catagory -->
-                <div class="single-products-catagory clearfix">
-                    <a href="/shop">
-                        <img src="/img/bg-img/2.jpg" alt="">
-                        <!-- Hover Content -->
-                        <div class="hover-content">
-                            <div class="line"></div>
-                            <p>From $70</p>
-                            <h4>Sugar Bliss </h4>
-                        </div>
-                    </a>
-                </div>
-
-                <!-- Single Catagory -->
-                <div class="single-products-catagory clearfix">
-                    <a href="/shop">
-                        <img src="/img/bg-img/3.jpg" alt="">
-                        <!-- Hover Content -->
-                        <div class="hover-content">
-                            <div class="line"></div>
-                            <p>From $50</p>
-                            <h4>Ocean Mist</h4>
-                        </div>
-                    </a>
-                </div>
-
-                <!-- Single Catagory -->
-                <div class="single-products-catagory clearfix">
-                    <a href="/shop">
-                        <img src="/img/bg-img/4.jpg" alt="">
-                        <!-- Hover Content -->
-                        <div class="hover-content">
-                            <div class="line"></div>
-                            <p>From $180</p>
-                            <h4>Sandal Dream</h4>
-                        </div>
-                    </a>
-                </div>
-
-                <!-- Single Catagory -->
-                <div class="single-products-catagory clearfix">
-                    <a href="/shop">
-                        <img src="/img/bg-img/5.jpg" alt="">
-                        <!-- Hover Content -->
-                        <div class="hover-content">
-                            <div class="line"></div>
-                            <p>From $18</p>
-                            <h4>Sandal Dream </h4>
-                        </div>
-                    </a>
-                </div>
-
-                <!-- Single Catagory -->
-                <div class="single-products-catagory clearfix">
-                    <a href="/shop">
-                        <img src="/img/bg-img/6.jpg" alt="">
-                        <!-- Hover Content -->
-                        <div class="hover-content">
-                            <div class="line"></div>
-                            <p>From $80</p>
-                            <h4>Garden Muse</h4>
-                        </div>
-                    </a>
-                </div>
-
-                <!-- Single Catagory -->
-                <div class="single-products-catagory clearfix">
-                    <a href="/shop">
-                        <img src="/img/bg-img/7.jpg" alt="">
-                        <!-- Hover Content -->
-                        <div class="hover-content">
-                            <div class="line"></div>
-                            <p>From $89</p>
-                            <h4>Morning Dew</h4>
-                        </div>
-                    </a>
-                </div>
-
-                <!-- Single Catagory -->
-                <div class="single-products-catagory clearfix">
-                    <a href="/shop">
-                        <img src="/img/bg-img/8.jpg" alt="">
-                        <!-- Hover Content -->
-                        <div class="hover-content">
-                            <div class="line"></div>
-                            <p>From $50</p>
-                            <h4>Pure Sunshine</h4>
-                        </div>
-                    </a>
-                </div>
-
-                <!-- Single Catagory -->
-                <div class="single-products-catagory clearfix">
-                    <a href="/shop">
-                        <img src="/img/bg-img/9.jpg" alt="">
-                        <!-- Hover Content -->
-                        <div class="hover-content">
-                            <div class="line"></div>
-                            <p>From $78</p>
-                            <h4>Zest Splash</h4>
-                        </div>
-                    </a>
-                </div>
+                <% products.forEach((product, index)=> { %> 
+                    <div class="single-products-catagory clearfix">
+                        <a href="/product-details/<%= product._id %>">
+                            <img src="<%=product.images[0]%>" alt="">
+                            <!-- Hover Content -->
+                            <div class="hover-content">
+                                <div class="line"></div>
+                                <p>From <%=product.defaultVariant ? product.defaultVariant.price: ''%></p>
+                                <h4><%=product.name%></h4>
+                            </div>
+                        </a>
+                    </div>
+                <% } ) %>
             </div>
         </div>
         <!-- Product Catagories Area End -->
     </div>
     <!-- ##### Main Content Wrapper End ##### -->
-
-   
 
     <!-- ##### Footer Area Start ##### -->
     <footer class="footer_area clearfix">
@@ -235,7 +139,7 @@
                     <div class="single_widget_area">
                         <!-- Logo -->
                         <div class="footer-logo mr-50">
-                            <a href="/"><img src="/img/core-img/logo2.png" alt=""></a>
+                            <a href="/"><img src="img/core-img/logo2.png" alt=""></a>
                         </div>
                         <!-- Copywrite Text -->
                         <p class="copywrite"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
@@ -253,19 +157,16 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                                 <div class="collapse navbar-collapse" id="footerNavContent">
                                     <ul class="navbar-nav ml-auto">
                                         <li class="nav-item active">
-                                            <a class="nav-link" href="/">Home</a>
+                                            <a class="nav-link" href="/home">Home</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="/shop">Shop</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="./productDetails.ejs">Product</a>
+                                            <a class="nav-link" href="/product-details">Product</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="/cart">Cart</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="/checkout">Checkout</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -279,15 +180,15 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <!-- ##### Footer Area End ##### -->
 
     <!-- ##### jQuery (Necessary for All JavaScript Plugins) ##### -->
-    <script src="js/jquery/jquery-2.2.4.min.js"></script>
+    <script src="/js/jquery/jquery-2.2.4.min.js"></script>
     <!-- Popper js -->
-    <script src="js/popper.min.js"></script>
+    <script src="/js/popper.min.js"></script>
     <!-- Bootstrap js -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
     <!-- Plugins js -->
-    <script src="js/plugins.js"></script>
+    <script src="/js/plugins.js"></script>
     <!-- Active js -->
-    <script src="js/active.js"></script>
+    <script src="/js/active.js"></script>
 
 </body>
 
