--- a/views/admin/add-fragrance.ejs
+++ b/views/admin/add-fragrance.ejs
@@ -760,6 +760,11 @@
                                 </div>
                                 <!-- new-category -->
                                 <div class="wg-box">
+                                    <% if (error) { %>
+                                        <div style="color: red; padding: 10px; border: 1px solid red; background-color: #fdd;"> 
+                                          <%= error %>
+                                        </div>
+                                      <% } %>
                                     <form class="form-new-product form-style-1" method="POST" action="/admin/add-fragrance" >
                                         <fieldset class="name-safa">
                                             <div class="body-title">Fragrance Type <span class="tf-color-1">*</span></div>
