--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1045,8 +1045,8 @@ button:hover {
                                             <div class="cols gap10">
                                                 <button class="tf-button w-full" type="submit">Add product</button>
                                                 <!-- <button class="tf-button style-1 w-full" type="submit">Save product</button> -->
-                                                <a href="/admin/Varient" class="tf-button style-2 w-full">Select
-                                                    Varient</a>
+                                                <a href="/admin/add-variant" class="tf-button style-2 w-full">Add
+                                                    Variant</a>
                                             </div>
                                         </fieldset>
                                     </div>
