--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -844,9 +844,8 @@
                                                       <i class="icon-eye"></i>
                                                     </div>
                                                     <div class="item edit">
-                                                      <i class="icon-edit-3"></i>
+                                                    <a href="/admin/edit-product/<%= product._id %>"><i class="icon-edit-3"></i> </a> 
                                                     </div>
-                                                   
                                                   </div>
                                                 </div>
                                               </li>
